--- a/src/main/kotlin/org/wfanet/measurement/populationdataprovider/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/populationdataprovider/BUILD.bazel
@@ -4,6 +4,7 @@ package(
     default_visibility = [
         "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/loadtest/dataprovider:__subpackages__",
+        "//src/main/kotlin/org/wfanet/measurement/integration/common:__subpackages__"
     ],
 )
 
