--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -67,6 +67,8 @@ jobs:
           build --define worker2_id=worker2
           build --define worker2_public_api_target=worker2.example.com:8443
           build --define mc_name=measurementConsumers/foo
+          build --define mc_api_key=foo
+          build --define mc_cert_name=measurementConsumers/foo/certificates/bar
           build --define edp1_name=dataProviders/foo1
           build --define edp1_cert_name=dataProviders/foo1/certificates/bar1
           build --define edp2_name=dataProviders/foo2
