--- a/src/main/kotlin/org/wfanet/measurement/loadtest/resourcesetup/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/loadtest/resourcesetup/BUILD.bazel
@@ -36,6 +36,7 @@ kt_jvm_library(
         "//src/main/proto/wfa/measurement/api/v2alpha:measurement_consumer_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/api/v2alpha:measurement_consumers_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/config:authority_key_to_principal_map_kt_jvm_proto",
+        "//src/main/proto/wfa/measurement/config/reporting:measurement_consumer_config_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom:account_kt_jvm_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom:accounts_service_kt_jvm_grpc_proto",
         "//src/main/proto/wfa/measurement/internal/kingdom:certificate_kt_jvm_proto",
