--- a/src/main/k8s/local/testing/config_files_for_panel_match_kustomization.yaml
+++ b/src/main/k8s/local/testing/config_files_for_panel_match_kustomization.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 configMapGenerator:
-- name: config-files-for-panel-match
+- name: config-files
   files:
   - authority_key_identifier_to_principal_map.textproto
   - synthetic_population_spec_small.textproto
