--- a/src/main/k8s/local/testing/BUILD.bazel
+++ b/src/main/k8s/local/testing/BUILD.bazel
@@ -71,11 +71,15 @@ kustomization_dir(
 kustomization_dir(
     name = "config_files_for_panel_match",
     srcs = [
-        "config_files_for_panel_match_kustomization.yaml",
+        "config_files_kustomization.yaml",
+        "empty_encryption_key_pair_config.textproto",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
     ],
-    renames = {"config_files_for_panel_match_kustomization.yaml": "kustomization.yaml"},
+    renames = {
+        "config_files_for_panel_match_kustomization.yaml": "kustomization.yaml",
+        "empty_encryption_key_pair_config.textproto": "encryption_key_pair_config.textproto",
+    },
 )
 
 kustomization_dir(
