refactor: Extract listResources utility function for handling pagination

--- a/src/main/kotlin/org/wfanet/measurement/common/api/grpc/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/common/api/grpc/BUILD.bazel
@@ -3,7 +3,7 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 package(default_visibility = ["//visibility:public"])
 
 kt_jvm_library(
-    name = "grpc",
+    name = "akid_principal_server_interceptor",
     srcs = ["AkidPrincipalServerInterceptor.kt"],
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/common/api:principal",
@@ -12,5 +12,15 @@ kt_jvm_library(
         "@wfa_common_jvm//imports/java/io/grpc:context",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
+    ],
+)
+
+kt_jvm_library(
+    name = "list_resources",
+    srcs = ["ListResources.kt"],
+    deps = [
+        "@wfa_common_jvm//imports/java/com/google/protobuf",
+        "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
+        "@wfa_rules_kotlin_jvm//imports/io/gprc/kotlin:stub",
     ],
 )
