--- a/src/main/kotlin/org/wfanet/measurement/api/v2alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/api/v2alpha/BUILD.bazel
@@ -52,7 +52,7 @@ kt_jvm_library(
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:context_keys",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:measurement_principal",
-        "//src/main/kotlin/org/wfanet/measurement/common/api/grpc",
+        "//src/main/kotlin/org/wfanet/measurement/common/api/grpc:akid_principal_server_interceptor",
         "//src/main/kotlin/org/wfanet/measurement/common/grpc:context",
         "//src/main/kotlin/org/wfanet/measurement/common/identity",
         "//src/main/proto/wfa/measurement/api/v2alpha:duchy_kt_jvm_proto",
