--- a/src/main/kotlin/org/wfanet/measurement/reporting/service/api/v1alpha/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/reporting/service/api/v1alpha/BUILD.bazel
@@ -132,7 +132,7 @@ kt_jvm_library(
         "context_keys",
         ":reporting_principal",
         "//src/main/kotlin/org/wfanet/measurement/api/v2alpha:resource_key",
-        "//src/main/kotlin/org/wfanet/measurement/common/api/grpc",
+        "//src/main/kotlin/org/wfanet/measurement/common/api/grpc:akid_principal_server_interceptor",
         "//src/main/kotlin/org/wfanet/measurement/common/identity",
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/java/io/grpc:api",
