--- a/src/main/k8s/local/testing/BUILD.bazel
+++ b/src/main/k8s/local/testing/BUILD.bazel
@@ -73,6 +73,7 @@ kustomization_dir(
     name = "config_files_for_panel_match",
     srcs = [
         "config_files_kustomization.yaml",
+        "//src/main/k8s/local:empty_encryption_key_pair_config.textproto",
         "//src/main/k8s/testing/data:synthetic_generation_specs_small",
         "//src/main/k8s/testing/secretfiles:known_event_group_metadata_type_set",
         "//src/main/k8s/testing/secretfiles:metric_spec_config.textproto",
@@ -81,7 +82,6 @@ kustomization_dir(
         "config_files_kustomization.yaml": "kustomization.yaml",
         "empty_encryption_key_pair_config.textproto": "encryption_key_pair_config.textproto",
     },
-    deps = ["//src/main/k8s/local:empty_encryption_key_pair_config.textproto"],
 )
 
 kustomization_dir(
@@ -94,11 +94,11 @@ kustomization_dir(
 
 kustomization_dir(
     name = "mc_config",
+    srcs = ["//src/main/k8s/local:mc_config_kustomization.yaml"],
     renames = {
         "mc_config_kustomization.yaml": "kustomization.yaml",
     },
     tags = ["manual"],
-    deps = ["//src/main/k8s/local:mc_config_kustomization.yaml"],
 )
 
 kustomization_dir(
