In InProcessCmmsComponents: use properties instead of accessor functions for modelProviderName, remove populationInfoMap field and create map when InProcessPopulationRequisitionFulfiller is initialized. In InProcessPopulationRequisitionFulfiller: reuse clients created in InProcessKingdom. In ProtoConversions: update checks of field existence. Update MeasurementResults BUILD file to only import needed libraries.

--- a/src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider/BUILD.bazel
@@ -104,8 +104,8 @@ kt_jvm_library(
     name = "measurement_results",
     srcs = ["MeasurementResults.kt"],
     deps = [
-        "//src/main/kotlin/org/wfanet/measurement/eventdataprovider/eventfiltration:event_filters",
-        "//src/main/proto/wfa/measurement/api/v2alpha:population_spec_kt_jvm_proto",
+        "//imports/java/org/projectnessie/cel",
+        "@wfa_common_jvm//imports/java/com/google/protobuf",
         "//src/main/kotlin/org/wfanet/measurement/populationdataprovider:population_requisition_fulfiller",
     ]
 )
