feat: Use Bouncy Castle to generate CSRs for AWS private CA. (#1905)
Removes a dependency on `openssl` for generating CSRs and switches to
Bouncy Castle APIs instead. This PR is based on the corresponding
changes in #1602.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -231,6 +231,9 @@ maven.install(
         # CEL
         "org.projectnessie.cel:cel-core",
         "org.projectnessie.cel:cel-generated-pb",
+
+        # Bouncy Castle
+        "org.bouncycastle:bcpkix-jdk18on:1.79",
     ],
     boms = [
         "org.apache.beam:beam-sdks-java-bom:" + APACHE_BEAM_VERSION,
