--- a/src/main/kotlin/org/wfanet/measurement/populationdataprovider/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/populationdataprovider/BUILD.bazel
@@ -2,6 +2,7 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 package(
     default_visibility = [
+        "//src/main/kotlin/org/wfanet/measurement/integration/common:__subpackages__",
         "//src/main/kotlin/org/wfanet/measurement/loadtest/dataprovider:__subpackages__",
         "//src/test/kotlin/org/wfanet/measurement/loadtest/dataprovider:__subpackages__",
     ],
