--- a/src/main/k8s/local/testing/mc_config_kustomization.yaml
+++ b/src/main/k8s/local/testing/mc_config_kustomization.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 The Cross-Media Measurement Authors
+# Copyright 2024 The Cross-Media Measurement Authors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,13 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-configMapGenerator:
-- name: config-files
+secretGenerator:
+- name: mc-config
   files:
-  - authority_key_identifier_to_principal_map.textproto
-  - encryption_key_pair_config.textproto
-  - metric_spec_config.textproto
-  - synthetic_population_spec_small.textproto
-  - synthetic_event_group_spec_small_1.textproto
-  - synthetic_event_group_spec_small_2.textproto
-  - known_event_group_metadata_type_set.pb
+  - measurement_consumer_config.textproto
