refactor: replace InMemoryQueueclient with GooglePubSubEmulator

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -44,8 +44,8 @@ bazel_dep(
 # DO_NOT_SUBMIT (world-federation-of-advertisers/common-jvm#286)
 archive_override(
     module_name = "common-jvm",
-    strip_prefix = "common-jvm-df85682efae57f5c88da2bacb5b22bd9e221f8b2",
-    urls = "https://github.com/world-federation-of-advertisers/common-jvm/archive/df85682efae57f5c88da2bacb5b22bd9e221f8b2.tar.gz",
+    strip_prefix = "common-jvm-ccd0e6825a014c391118e6abba968a48cda0de63",
+    urls = "https://github.com/world-federation-of-advertisers/common-jvm/archive/ccd0e6825a014c391118e6abba968a48cda0de63.tar.gz",
 )
 
 bazel_dep(
@@ -211,6 +211,16 @@ maven.artifact(
     ],
     group = "org.apache.beam",
 )
+maven.artifact(
+    testonly = True,
+    artifact = "testcontainers",
+    group = "org.testcontainers",
+)
+maven.artifact(
+    testonly = True,
+    artifact = "gcloud",
+    group = "org.testcontainers",
+)
 maven.install(
     artifacts = [
         "com.google.crypto.tink:tink-awskms:1.9.1",
@@ -223,13 +233,13 @@ maven.install(
         "org.slf4j:slf4j-simple:1.7.32",
 
         # Google Cloud
-        "com.google.cloud:google-cloud-bigquerystorage",
-        "com.google.cloud:google-cloud-security-private-ca",
+        "com.google.cloud:google-cloud-bigquerystorage:3.10.3",
+        "com.google.cloud:google-cloud-security-private-ca:2.56.0",
         # TODO(googleapis/java-cloud-bom#5279): Remove when managed by BOM.
         "com.google.apis:google-api-services-storage:v1-rev20240706-2.0.0",
 
         # AWS
-        "software.amazon.awssdk:acmpca",
+        "software.amazon.awssdk:acmpca:2.29.19",
 
         # Apache Beam
         "org.apache.beam:beam-runners-direct-java",
@@ -239,10 +249,12 @@ maven.install(
         # CEL
         "org.projectnessie.cel:cel-core",
         "org.projectnessie.cel:cel-generated-pb",
+        "com.google.cloud:google-cloud-pubsub:1.134.2",
     ],
     boms = [
         "org.apache.beam:beam-sdks-java-bom:" + APACHE_BEAM_VERSION,
         "org.projectnessie.cel:cel-bom:0.5.0",
+        "org.testcontainers:testcontainers-bom:1.19.3",
     ],
     fail_if_repin_required = True,
     fetch_sources = True,  # For IDE integration.
