--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
@@ -1,5 +1,5 @@
 load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_test")
-load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
+#load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 
 kt_jvm_test(
     name = "BaseTeeApplicationTest",
@@ -10,6 +10,8 @@ kt_jvm_test(
         "//src/main/proto/wfa/measurement/securecomputation/controlplane/v1alpha/testing:test_work_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/rabbitmq/testing",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/pubsub:google_pub_sub_client",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/pubsub/testing:google_pub_sub_emulator_client",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/queue:queue_client",
     ],
 )
