refactor: use new Subscriber defined in common-jvm/gcloud/subscriber package

--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
@@ -8,6 +8,6 @@ kt_jvm_library(
     deps = [
         "@wfa_common_jvm//imports/java/com/google/protobuf",
         "@wfa_common_jvm//imports/kotlin/kotlinx/coroutines:core",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/queue:queue_client",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/queue:queue_subscriber",
     ],
 )
