--- a/src/test/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
+++ b/src/test/kotlin/org/wfanet/measurement/securecomputation/teesdk/BUILD.bazel
@@ -9,8 +9,9 @@ kt_jvm_test(
         "@wfa_common_jvm//imports/java/com/google/common/truth",
         "@wfa_common_jvm//imports/kotlin/kotlin/test",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/pubsub:google_pub_sub_client",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/pubsub/subscriber",
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/pubsub/testing:google_pub_sub_emulator_client",
-        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/queue:queue_client",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/queue:queue_subscriber",
         "@wfa_common_jvm//src/main/proto/wfa/measurement/queue:test_work_kt_jvm_proto",
     ],
 )
