--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -89,6 +89,11 @@ bazel_dep(
     repo_name = "wfa_virtual_people_common",
 )
 bazel_dep(
+    name = "virtual-people-core-serving",
+    version = "0.2.0",
+    repo_name = "wfa_virtual_people_core_serving",
+)
+bazel_dep(
     name = "grpc-gateway",
     version = "2.18.1",
     repo_name = "grpc_ecosystem_grpc_gateway",
