--- a/src/main/k8s/BUILD.bazel
+++ b/src/main/k8s/BUILD.bazel
@@ -49,6 +49,15 @@ cue_library(
 )
 
 cue_library(
+    name = "measurement_system_prober",
+    srcs = ["measurement_system_prober.cue"],
+    deps = [
+        ":base",
+        ":config",
+    ],
+)
+
+cue_library(
     name = "spanner_duchy",
     srcs = ["spanner_duchy.cue"],
     deps = [
