--- a/src/main/k8s/local/BUILD.bazel
+++ b/src/main/k8s/local/BUILD.bazel
@@ -188,6 +188,39 @@ cue_dump(
     ],
 )
 
+cue_library(
+    name = "measurement_system_prober_cue",
+    srcs = ["measurement_system_prober.cue"],
+    deps = [
+        ":config_cue",
+        "//src/main/k8s:measurement_system_prober",
+    ],
+)
+
+cue_dump(
+    name = "measurement_system_prober",
+    srcs = ["measurement_system_prober.cue"],
+    cue_tags = {
+        "mc_name": TEST_K8S_SETTINGS.mc_name,
+        "mc_api_key": TEST_K8S_SETTINGS.mc_api_key,
+        "container_registry": IMAGE_REPOSITORY_SETTINGS.container_registry,
+        "image_repo_prefix": IMAGE_REPOSITORY_SETTINGS.repository_prefix,
+        "image_tag": IMAGE_REPOSITORY_SETTINGS.image_tag,
+        "secret_name": SECRET_NAME,
+        "edp1_name": TEST_K8S_SETTINGS.edp1_name,
+        "edp2_name": TEST_K8S_SETTINGS.edp2_name,
+        "edp3_name": TEST_K8S_SETTINGS.edp3_name,
+        "edp4_name": TEST_K8S_SETTINGS.edp4_name,
+        "edp5_name": TEST_K8S_SETTINGS.edp5_name,
+        "edp6_name": TEST_K8S_SETTINGS.edp6_name,
+    },
+    tags = ["manual"],
+    deps = [
+        ":measurement_system_prober_cue",
+        "//src/main/k8s:measurement_system_prober",
+    ],
+)
+
 cue_dump(
     name = "postgres_database",
     srcs = ["postgres_database.cue"],
@@ -352,6 +385,7 @@ kustomization_dir(
         ":edp_simulators",
         ":emulators",
         ":kingdom",
+        ":measurement_system_prober",
         ":postgres_database",
     ],
     generate_kustomization = True,
