--- a/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/job/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/common/job/BUILD.bazel
@@ -97,3 +97,32 @@ java_image(
     main_class = "org.wfanet.measurement.kingdom.deploy.common.job.ExchangesDeletionJobKt",
     visibility = ["//src:docker_image_deployment"],
 )
+
+kt_jvm_library(
+    name = "measurement_system_prober_job",
+    srcs = ["MeasurementSystemProberJob.kt"],
+    runtime_deps = ["@wfa_common_jvm//imports/java/io/grpc/netty"],
+    deps = [
+        "//src/main/kotlin/org/wfanet/measurement/kingdom/batch:measurement_system_prober",
+        "@wfa_common_jvm//imports/java/picocli",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:signing_certs",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/grpc",
+    ],
+)
+
+java_binary(
+    name = "MeasurementSystemProberJob",
+    main_class = "org.wfanet.measurement.kingdom.deploy.common.job.MeasurementSystemProberJobKt",
+    runtime_deps = [
+        ":measurement_system_prober_job",
+        "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/gcloud/logging",
+    ],
+)
+
+java_image(
+    name = "measurement_system_prober_image",
+    binary = ":MeasurementSystemProberJob",
+    main_class = "org.wfanet.measurement.kingdom.deploy.common.job.MeasurementSystemProberJobKt",
+    visibility = ["//src:docker_image_deployment"],
+)
