feat: Implement internal Access API services

--- a/src/main/kotlin/org/wfanet/measurement/common/api/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/common/api/BUILD.bazel
@@ -56,3 +56,8 @@ kt_jvm_library(
         "@wfa_common_jvm//src/main/kotlin/org/wfanet/measurement/common/crypto:hashing",
     ],
 )
+
+kt_jvm_library(
+    name = "resource_ids",
+    srcs = ["ResourceIds.kt"],
+)
