--- a/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/spanner/common/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/kingdom/deploy/gcloud/spanner/common/BUILD.bazel
@@ -11,6 +11,7 @@ kt_jvm_library(
     srcs = glob(["*.kt"]),
     deps = [
         "//src/main/kotlin/org/wfanet/measurement/common/api:etags",
+        "//src/main/kotlin/org/wfanet/measurement/common/grpc:error_info",
         "//src/main/kotlin/org/wfanet/measurement/common/identity",
         "//src/main/proto/google/rpc:error_details_kt_jvm_proto",
         "//src/main/proto/google/rpc:status_kt_jvm_proto",
