--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -251,6 +251,8 @@ maven.install(
     boms = [
         "org.apache.beam:beam-sdks-java-bom:" + APACHE_BEAM_VERSION,
         "org.projectnessie.cel:cel-bom:0.5.0",
+        # TODO: Drop once rules_kotlin_jvm is updated
+        "org.jetbrains.kotlinx:kotlinx-coroutines-bom:1.9.0",
     ],
     fail_if_repin_required = True,
     fetch_sources = True,  # For IDE integration.
