--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/datawatcher/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/datawatcher/BUILD.bazel
@@ -3,7 +3,7 @@ load("@wfa_rules_kotlin_jvm//kotlin:defs.bzl", "kt_jvm_library")
 package(default_visibility = ["//visibility:public"])
 
 kt_jvm_library(
-    name = "data_watcher",
+    name = "datawatcher",
     srcs = ["DataWatcher.kt"],
     deps = [
         "//src/main/proto/wfa/measurement/securecomputation:data_watcher_config_kt_jvm_proto",
