--- a/src/main/kotlin/org/wfanet/measurement/securecomputation/datawatcher/BUILD.bazel
+++ b/src/main/kotlin/org/wfanet/measurement/securecomputation/datawatcher/BUILD.bazel
@@ -6,6 +6,7 @@ kt_jvm_library(
     name = "datawatcher",
     srcs = ["DataWatcher.kt"],
     deps = [
+        "//src/main/kotlin/org/wfanet/measurement/securecomputation/controlplane/v1alpha:google_pub_sub_work_items_service",
         "//src/main/proto/wfa/measurement/securecomputation:data_watcher_config_kt_jvm_proto",
         "@wfa_common_jvm//imports/java/com/google/cloud/functions:functions_framework_api",
         "@wfa_common_jvm//imports/java/com/google/cloud/storage",
